--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
     "mongoose-sequence": "^6.0.1",
-    "multer": "^2.0.1",
-    "serverless-http": "^4.0.0"
+    "multer": "^2.0.1"
   }
 }
