--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
     "mongoose-sequence": "^6.0.1",
-    "multer": "^2.0.1"
+    "multer": "^2.0.1",
+    "xlsx": "^0.18.5"
   }
 }
